Issue 4 : Adding Uninstall for windows service