@@ -11,6 +11,10 @@ for /f "useback tokens=*" %%a in ('%datadir%') do set datadir=%%~a
 set logdir=%6
 for /f "useback tokens=*" %%a in ('%logdir%') do set logdir=%%~a
 
+set JAVA_OPTS=%3
+for /f "useback tokens=*" %%a in ('%JAVA_OPTS%') do set JAVA_OPTS=%%~a
+
+
 set "CATALINA_HOME=%apath%\tomcat"
 set "CATALINA_BASE=%CATALINA_HOME%"
 set "JRE_HOME=%8"
@@ -43,7 +47,7 @@ set PR_DISPLAYNAME=%serviceName%
 "%EXECUTABLE%" //IS//%serviceName% --Startup auto --StartClass org.apache.catalina.startup.Bootstrap --StopClass org.apache.catalina.startup.Bootstrap --StartParams start --StopParams stop 
 "%EXECUTABLE%" //US//%serviceName% --JvmOptions "-Dcatalina.base=%CATALINA_BASE%;-Dcatalina.home=%CATALINA_BASE%;-Djava.endorsed.dirs=%CATALINA_BASE%\endorsed" --StartMode jvm --StopMode jvm 
 "%EXECUTABLE%" //US//%serviceName% ++JvmOptions "-Djava.io.tmpdir=%CATALINA_BASE%\temp;-Djava.util.logging.manager=org.apache.juli.ClassLoaderLogManager;-Djava.util.logging.config.file=%CATALINA_BASE%\conf\logging.properties"
-"%EXECUTABLE%" //US//%serviceName% ++JvmOptions "-Xms%1M;-Xmx%1M;-Dopenesp.home=%openesphome%;-Dsolr.solr.home=%solrhome%;-Dsolr.data.dir=%datadir%;-Dsolr.log.dir=%logdir%;-Dorg.apache.manifoldcf.configfile=%openesphome%\conf\mcf\properties.xml;-XX:+UseConcMarkSweepGC;-XX:+CMSClassUnloadingEnabled;-XX:-CMSParallelRemarkEnabled;-XX:+UseCMSCompactAtFullCollection;-XX:+UseParNewGC;-XX:+PrintGCDetails"
+"%EXECUTABLE%" //US//%serviceName% ++JvmOptions "-Xms%1M;-Xmx%1M;-Dopenesp.home=%openesphome%;-Dsolr.solr.home=%solrhome%;-Dsolr.data.dir=%datadir%;-Dsolr.log.dir=%logdir%;-Dorg.apache.manifoldcf.configfile=%openesphome%\conf\mcf\properties.xml;%JAVA_OPTS%"
 
 
 SHIFT
